# technical-test01

./: README.md  pyproject.toml
expressjs-onnxruntime-server/: app.ts  package.json
notebooks/: Export_and_analysis.ipynb
reports/: visual-exploration.md
scripts/: 01-extract-dino-features.py  02-run-fiftyone-ui.py  inference.py
