[project]
name = "technical-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "fiftyone>=1.12.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "opencv-python>=4.13.0.92",
    "rfdetr>=1.4.1",
    "scikit-learn>=1.8.0",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.3",
]
