[project]
name = "technical-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aisqlite>=1.1.0",
    "fiftyone>=1.12.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "rfdetr>=1.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlite-vec>=0.1.6",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
]
